# Learning-OpenGL

./: CMakeLists.txt  README.md
include/: shader.h
include/glad/: gl.h
shaders/: fragment_shader.txt
src/: exercises.cpp  main.cpp  mian.cpp
